[package]
name = "multiboot2"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["multiboot2"]
description = "multiboot 2 crate for kernels"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-multiboot2.git"
homepage = "https://github.com/nathanfaucett/rs-multiboot2"

[dependencies.memory_area]
#git = "https://github.com/nathanfaucett/rs-memory_area.git"
path = "../rs-memory_area"

[dependencies.elf_section]
#git = "https://github.com/nathanfaucett/rs-elf_section.git"
path = "../rs-elf_section"
